# rpc-server

./: Dockerfile  pyproject.toml
src/app/application/contracts/: requests_interface.py  resolver_interface.py
src/app/application/dto/: request_dto.py
src/app/application/usecases/: requests_usecase.py
src/app/domain/entities/: request_entity.py
src/app/infrastructure/brokers/: rabbit_broker.py
src/app/infrastructure/services/: request_service.py  resolver_service.py
src/app/main/: config.py  di.py  main.py
src/app/presentation/shemas/: request_shema.py
src/app/presentation/web_rpc/v1/: router.py
